<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_language"
        android:title="@string/menu_language"
        android:icon="@drawable/ic_language"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_theme"
        android:title="@string/menu_theme"
        app:showAsAction="never">
        <menu>
            <item android:id="@+id/menu_theme_light"  android:title="@string/menu_theme_light" />
            <item android:id="@+id/menu_theme_dark"   android:title="@string/menu_theme_dark" />
            <item android:id="@+id/menu_theme_system" android:title="@string/menu_theme_system" />
        </menu>
    </item>

</menu>
